--- a/client/nav.jade
+++ b/client/nav.jade
@@ -8,42 +8,45 @@ template(name='nav')
                     i.large.loading.notched.circle.icon
             else
                 a.header.icon.item(href='/' class="{{isActivePath '/'}}")
-                    i.home.large.large.icon
-                    //- +i name='home-page'  
+                    //- i.home.large.large.icon
+                    +i name='home-page'  
                 if currentUser  
                     a.header.icon.set_model.item(href='/home' class="{{isActivePath '/home'}}")
-                        i.th.large.large.icon
-                        //- +i name='squared-menu'    
+                        //- i.th.large.large.icon
+                        +i name='squared-menu'    
                 if is_staff
-                    a.item(href='/staff' class="{{isActivePath '/staff'}}" title='staff')
-                        //- +i name='employee-card'
-                        i.shield.large.icon
-                        .mobile.hidden Staff
-                    a.item(href='/users' class="{{isActivePath '/users'}}" title='Users')
-                        i.users.large.icon
-                        //- +i name='groups'
-                        .mobile.hidden Users
+                    a.icon.item(href='/staff' class="{{isActivePath '/staff'}}" title='staff')
+                        +i name='employee-card'
+                        //- i.shield.large.icon
+                        //- .mobile.hidden Staff
+                    a.icon.item(href='/users' class="{{isActivePath '/users'}}" title='Users')
+                        //- i.users.large.icon
+                        +i name='groups'
+                        //- .mobile.hidden Users
                 if is_admin
-                    a.item(href='/alpha' class="{{isActivePath '/alpha'}}")
-                        //- +i name='employee-card'
-                        i.campground.large.icon
-                        .mobile.hidden Alpha
+                    a.icon.item(href='/alpha' class="{{isActivePath '/alpha'}}")
+                        +i name='alpha'
+                        //- i.campground.large.icon
+                        //- .mobile.hidden Alpha
+                    a.icon.item(href='/omega' class="{{isActivePath '/omega'}}")
+                        +i name='omega'
+                        //- .mobile.hidden Omega
                     
                 //- a.item.set_marketplace(href='/m/marketplace' class="{{isActivePath '/m/marketplace'}}")
                 //-     +i name='shop'
                 if is_staff
                     a.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
-                        i.clinic.medical.large.icon
-                        //- +i name='treadmill'    
-                        .mobile.hidden Health Club
+                        //- i.clinic.medical.large.icon
+                        +i name='treadmill'    
+                        //- .mobile.hidden Health Club
             .right.menu
                 if is_admin
                     a.icon.item.set_task(href='/m/task' class="{{isActivePath '/m/task'}}")
-                        //- +i name='task'
-                        i.tasks.large.icon
+                        +i name='task'
+                        //- i.tasks.large.icon
                     a.icon.item.set_note(href='/m/note' class="{{isActivePath '/m/note'}}")
-                        //- +i name='note'
-                        i.rss.large.icon
+                        +i name='note'
+                        //- i.rss.large.icon
                 if currentUser
                     //- .item
                     //-     .ui.header(title='your karma') #{currentUser.karma}
@@ -59,15 +62,15 @@ template(name='nav')
                                 //- i.large.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
                         if is_user
                             a.icon.item(href="/chat" class="{{isActivePath '/chat'}}")
-                                //- +i name='filled-topic'
-                                i.chat.large.icon
+                                +i name='filled-topic'
+                                //- i.chat.large.icon
                         //- if is_admin
                         //-     a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
                         //-         +i name='user shield'
                         if is_dev
                             a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
-                                //- +i name='active directory'
-                                i.sitemap.large.icon
+                                +i name='active directory'
+                                //- i.sitemap.large.icon
                         unless is_frontdesk
                             a.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
                                 if currentUser.image_id
@@ -89,7 +92,8 @@ template(name='nav')
             .ui.inverted.attached.borderless.menu.topnav
                 each bookmarked_models
                     a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}")
-                        i.large.icon(class=icon)
+                        //- i.large.icon(class=icon)
+                        +i name=icon
                         |#{title}
 
 
