--- a/client/nav.jade
+++ b/client/nav.jade
@@ -198,4 +198,4 @@ template(name='footer')
             .row
                 .ui.center.aligned.header
                     i.copyright.outline.icon
-                    |Gold Run Online
+                    |GRO
