--- a/components/omega.jade
+++ b/components/omega.jade
@@ -5,7 +5,7 @@ template(name='omega')
         input.omega_in(type='text')
     each sessions
         .ui.label
-            i.remove.icon
+            i.remove.icon.delete_session
             |#{name}
     with result
         .ui.header result
