rounded buttons, change icons to office, show chat for all users

--- a/client/client.jade
+++ b/client/client.jade
@@ -31,7 +31,8 @@ template(name='layout')
                 else 
                     +yield
         //- if is_eric
-        +footer 
+        unless is_frontdesk
+            +footer 
 
     //- .context
     //-     +nav
