--- a/client/staff.jade
+++ b/client/staff.jade
@@ -4,7 +4,7 @@ template(name='staff')
         i.shield.grey.icon
         |Staff
     //- i.massive.loading.brown.poo.icon
-    a.ui.big.button(href='/add_resident')
+    a.ui.big.circular.button(href='/add_resident')
         i.user.shield.large.icon
         | Add Resident
         
