--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -12,9 +12,9 @@ template(name='user_edit')
                     .ui.small.header @#{user_from_username_param.username}
                     //- i.cog.icon
                     +image_edit key='image_id' title='profile image' direct=true
-                    +password_edit
+                    //- +password_edit
                     if is_dev
-                        +phone_editor
+                        //- +phone_editor
                         +username_edit
                     +emails_edit
                     if is_dev
@@ -29,17 +29,17 @@ template(name='user_edit')
                                 +text_edit key='first_name' label='First Name' direct=true
                                 +text_edit key='last_name' label='Last Name' direct=true
                                 //- +text_edit key='address' label='Address' direct=true
-                                +number_edit key='healthclub_code' label='Healthclub Code' direct=true
+                                //- +number_edit key='healthclub_code' label='Healthclub Code' direct=true
                                 +number_edit key='unit_number' label='Unit #' direct=true
                                 +number_edit key='building_number' label='Building #' direct=true
                                 //- +text_edit key='building_code' label='Building Code' direct=true
-                                +date_edit key='start_date' label='start date' direct=true
-                                if user_is_owner
-                                    +pdf_edit key='ownership_paperwork' label='Ownership Paperwork' direct=true
-                                else if user_is_resident
+                                +date_edit key='start_date' label='Start Date' direct=true
+                                //- if user_is_owner
+                                //-     +pdf_edit key='ownership_paperwork' label='Ownership Paperwork' direct=true
+                                if user_is_resident
                                     +date_edit key='expiration_date' label='Expiration Date' direct=true
-                                    +pdf_edit key='lease_agreement' label='Lease Agreement' direct=true
-                                +pdf_edit key='member_guidelines_and_waiver' label='Member Guidelines and Waiver' direct=true
+                                //-     +pdf_edit key='lease_agreement' label='Lease Agreement' direct=true
+                                //- +pdf_edit key='member_guidelines_and_waiver' label='Member Guidelines and Waiver' direct=true
                             else
                                 +text_view key='first_name' label='First Name' direct=true
                                 +text_view key='last_name' label='Last Name' direct=true
@@ -48,35 +48,35 @@ template(name='user_edit')
                                 +number_view key='building_number' label='Building #' direct=true
                                 +text_view key='building_code' label='Building Code' direct=true
                                 +date_view key='start_date' label='Start Date' direct=true
-                                if user_is_owner
-                                    +image_view key='ownership_paperwork' label='Ownership Paperwork' direct=true
-                                if user_is_resident
-                                    +date_view key='expiration_date' label='Expiration Date' direct=true
-                                    +pdf_view key='lease_agreement' label='Lease Agreement' direct=true
+                                //- if user_is_owner
+                                //-     +image_view key='ownership_paperwork' label='Ownership Paperwork' direct=true
+                                //- if user_is_resident
+                                //-     +date_view key='expiration_date' label='Expiration Date' direct=true
+                                //-     +pdf_view key='lease_agreement' label='Lease Agreement' direct=true
                                 +pdf_view key='member_guidelines_and_waiver' label='Lease Agreement' direct=true
                         //- +text_edit key='email' label='Email' direct=true
                         +phone_edit key='phone' label='Phone' direct=true
                         //- +image_edit key='banner_image_id' label='Banner Image' direct=true
                         //- +text_edit key='tagline' label='tag line' direct=true
                         
-                        if is_resident
-                            if is_staff
-                                +array_edit key='tags' label='Tags' direct=true
-                .column
-                    if is_staff
-                        //- with user_from_username_param
-                        +boolean_edit key='government_id_checked' label='Government Id Checked' direct=true
-                        +single_user_edit key='id_checked_by_staff' label='Government Id Checked by' role_filter='staff' direct=true
-                        +date_edit key='id_checked_date' label='Government Id Checked Date' direct=true
-                    else
-                        +boolean_view key='government_id_checked' label='Government Id Checked' direct=true
-                        +text_view key='id_checked_by_staff' label='Government Id Checked by' role_filter='staff' direct=true
-                        +date_view key='id_checked_date' label='Government Id Checked Date' direct=true
+                        //- if is_resident
+                        //-     if is_staff
+                        //-         +array_edit key='tags' label='Tags' direct=true
+                //- .column
+                    //- if is_staff
+                    //-     //- with user_from_username_param
+                    //-     +boolean_edit key='government_id_checked' label='Government Id Checked' direct=true
+                    //-     +single_user_edit key='id_checked_by_staff' label='Government Id Checked by' role_filter='staff' direct=true
+                    //-     +date_edit key='id_checked_date' label='Government Id Checked Date' direct=true
+                    //- else
+                    //-     +boolean_view key='government_id_checked' label='Government Id Checked' direct=true
+                    //-     +text_view key='id_checked_by_staff' label='Government Id Checked by' role_filter='staff' direct=true
+                    //-     +date_view key='id_checked_date' label='Government Id Checked Date' direct=true
                         //- with user_from_username_param
                     //- +text_edit key='spirit_animal' label='spirit animal' direct=true
-                    +boolean_edit key='published' label='Profile Published'
-                    //- +payment_methods
-                    +user_settings
+                    //- +boolean_edit key='published' label='Profile Published'
+                    //- //- +payment_methods
+                    //- +user_settings
                     
                     
 template(name='user_settings')
