--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -6,9 +6,9 @@ template(name='model_doc_edit')
                     .ui.header(title="model: #{model}")
                         |edit #{model}
                     +creation_info
-                    a.ui.big.icon.button(href="/m/#{current_model.slug}/#{_id}/view")
+                    a.ui.big.icon.circular.button(href="/m/#{current_model.slug}/#{_id}/view")
                         i.big.checkmark.icon
-                    #delete_doc.ui.icon.large.button
+                    #delete_doc.ui.icon.large.circular.button
                         i.trash.icon
                     +boolean_edit key='private' direct=true
                 .ten.wide.column.scrolling
@@ -27,7 +27,7 @@ template(name='model_doc_view')
             .row
                 .six.wide.column
                     .ui.cloud.segment
-                        .ui.large.button.back_to_model
+                        .ui.large.circular.button.back_to_model
                             i.left.chevron.icon
                             i.icon(class=current_model.icon)
                             //- +i name=current_model.icon classes='ui mini inline image'
@@ -43,11 +43,11 @@ template(name='model_doc_view')
                             //-         | View #{model}
 
                         // .ui.header
-                        //     a.ui.icon.button(href="/m/#{model}" title=plural)
+                        //     a.ui.icon.circular.button(href="/m/#{model}" title=plural)
                         //         i.chevron.left.icon
                         //     |View #{model}
                         if can_edit
-                            a.ui.big.icon.button(href="/m/#{current_model.slug}/#{_id}/edit" title='Edit')
+                            a.ui.big.icon.circular.button(href="/m/#{current_model.slug}/#{_id}/edit" title='Edit')
                                 i.pencil.icon
                         if is_admin
                             .ui.small.header timestamp tags
@@ -98,7 +98,7 @@ template(name='karma_transaction')
     .ui.header offer karma
     .ui.input
         input.offer_karma_amount(type='number')
-    .ui.button.offer_karma
+    .ui.circular.button.offer_karma
         i.right.chevron.icon
     each offers
         +offer
